@@ -43,6 +43,100 @@ if (is_admin()) {
     $my_meta->addImage($prefix . 'cat_icon', array('name' => __('Category Icon', 'geodirectory'), 'desc' => __('Choose a category icon', 'geodirectory'), 'validate_func' => '!empty'));
     /*$my_meta->addCheckbox($prefix.'pointless',array('name'=> __('<b>Exclude</b> Rating sort option','geodirectory'),'style'=>'hidden'));*/// hidden setting to trick WPML
 
+    $my_meta->addSelect($prefix . 'cat_schema',
+        array(
+            '' => __('Default (LocalBusiness)', 'geodirectory'),
+            'AccountingService' => 'AccountingService',
+            'Attorney' => 'Attorney',
+            'AutoBodyShop' => 'AutoBodyShop',
+            'AutoDealer' => 'AutoDealer',
+            'AutoPartsStore' => 'AutoPartsStore',
+            'AutoRental' => 'AutoRental',
+            'AutoRepair' => 'AutoRepair',
+            'AutoWash' => 'AutoWash',
+            'Bakery' => 'Bakery',
+            'BarOrPub' => 'BarOrPub',
+            'BeautySalon' => 'BeautySalon',
+            'BedAndBreakfast' => 'BedAndBreakfast',
+            'BikeStore' => 'BikeStore',
+            'BookStore' => 'BookStore',
+            'CafeOrCoffeeShop' => 'CafeOrCoffeeShop',
+            'ChildCare' => 'ChildCare',
+            'ClothingStore' => 'ClothingStore',
+            'ComputerStore' => 'ComputerStore',
+            'DaySpa' => 'DaySpa',
+            'Dentist' => 'Dentist',
+            'DryCleaningOrLaundry' => 'DryCleaningOrLaundry',
+            'Electrician' => 'Electrician',
+            'ElectronicsStore' => 'ElectronicsStore',
+            'EmergencyService' => 'EmergencyService',
+            'EntertainmentBusiness' => 'EntertainmentBusiness',
+            'Event' => 'Event',
+            'EventVenue' => 'EventVenue',
+            'ExerciseGym' => 'ExerciseGym',
+            'FinancialService' => 'FinancialService',
+            'Florist' => 'Florist',
+            'FoodEstablishment' => 'FoodEstablishment',
+            'FurnitureStore' => 'FurnitureStore',
+            'GardenStore' => 'GardenStore',
+            'GeneralContractor' => 'GeneralContractor',
+            'GolfCourse' => 'GolfCourse',
+            'HairSalon' => 'HairSalon',
+            'HardwareStore' => 'HardwareStore',
+            'HealthAndBeautyBusiness' => 'HealthAndBeautyBusiness',
+            'HobbyShop' => 'HobbyShop',
+            'HomeAndConstructionBusiness' => 'HomeAndConstructionBusiness',
+            'HomeGoodsStore' => 'HomeGoodsStore',
+            'Hospital' => 'Hospital',
+            'Hotel' => 'Hotel',
+            'HousePainter' => 'HousePainter',
+            'HVACBusiness' => 'HVACBusiness',
+            'InsuranceAgency' => 'InsuranceAgency',
+            'JewelryStore' => 'JewelryStore',
+            'LiquorStore' => 'LiquorStore',
+            'Locksmith' => 'Locksmith',
+            'LodgingBusiness' => 'LodgingBusiness',
+            'MedicalClinic' => 'MedicalClinic',
+            'MensClothingStore' => 'MensClothingStore',
+            'MobilePhoneStore' => 'MobilePhoneStore',
+            'Motel' => 'Motel',
+            'MotorcycleDealer' => 'MotorcycleDealer',
+            'MotorcycleRepair' => 'MotorcycleRepair',
+            'MovingCompany' => 'MovingCompany',
+            'MusicStore' => 'MusicStore',
+            'NailSalon' => 'NailSalon',
+            'NightClub' => 'NightClub',
+            'Notary' => 'Notary',
+            'OfficeEquipmentStore' => 'OfficeEquipmentStore',
+            'Optician' => 'Optician',
+            'PetStore' => 'PetStore',
+            'Physician' => 'Physician',
+            'Plumber' => 'Plumber',
+            'ProfessionalService' => 'ProfessionalService',
+            'RealEstateAgent' => 'RealEstateAgent',
+            'Residence' => 'Residence',
+            'Restaurant' => 'Restaurant',
+            'RoofingContractor' => 'RoofingContractor',
+            'RVPark' => 'RVPark',
+            'School' => 'School',
+            'SelfStorage' => 'SelfStorage',
+            'ShoeStore' => 'ShoeStore',
+            'SkiResort' => 'SkiResort',
+            'SportingGoodsStore' => 'SportingGoodsStore',
+            'SportsClub' => 'SportsClub',
+            'Store' => 'Store',
+            'TattooParlor' => 'TattooParlor',
+            'Taxi' => 'Taxi',
+            'TennisComplex' => 'TennisComplex',
+            'TireShop' => 'TireShop',
+            'ToyStore' => 'ToyStore',
+            'TravelAgency' => 'TravelAgency',
+            'VeterinaryCare' => 'VeterinaryCare',
+            'WholesaleStore' => 'WholesaleStore',
+            'Winery' => 'Winery'
+        ),
+        array('name' => __('Schema Type', 'geodirectory'), 'desc' => __('Select the Schema to use for this category', 'geodirectory') . "", 'std' => array('selectkey2')));
+
     /*$my_meta->addSelect($prefix.'cat_sort',array(''=>__('Default' , 'geodirectory'),
     'random'=>__('Random','geodirectory'),
     'az'=>__('Alphabetical' , 'geodirectory'),
